*SVN*

* Update JavaScriptGenerator#show/hide/toggle/remove to new Prototype syntax for multiple ids,  #6068 [petermichaux@gmail.com]

* Update UrlWriter to support :only_path. [Nicholas Seckar, Dave Thomas]

* Fixed JavaScriptHelper#link_to_function and JavaScriptHelper#button_to_function to have the script argument be optional [DHH]. So what used to require a nil, like this:

    link_to("Hider", nil, :class => "hider_link") { |p| p[:something].hide }
  
  ...can be written like this:

    link_to("Hider", :class => "hider_link") { |p| p[:something].hide }

* Update to script.aculo.us 1.6.3 [Thomas Fuchs]

* Update to Prototype 1.5.0_rc1 [sam]

* Added access to nested attributes in RJS #4548 [richcollins@gmail.com]. Examples:

    page['foo']['style']                  # => $('foo').style;
    page['foo']['style']['color']         # => $('blank_slate').style.color;
    page['foo']['style']['color'] = 'red' # => $('blank_slate').style.color = 'red';
    page['foo']['style'].color = 'red'    # => $('blank_slate').style.color = 'red';

* Fixed that AssetTagHelper#image_tag and others using compute_public_path should not modify the incoming source argument (closes #5102) [eule@space.ch]

* Deprecated the auto-appending of .png to AssetTagHelper#image_tag calls that doesn't have an extension [DHH] 

* Fixed FormOptionsHelper#select to respect :selected value #5813

* Fixed TextHelper#simple_format to deal with multiple single returns within a single paragraph #5835 [moriq@moriq.com]

* Fixed TextHelper#pluralize to handle 1 as a string #5909 [rails@bencurtis.com]

* Improved resolution of DateHelper#distance_of_time_in_words for better precision #5994 [Bob Silva]

* Changed that uncaught exceptions raised any where in the application will cause RAILS_ROOT/public/500.html to be read and shown instead of just the static "Application error (Rails)" [DHH]

* Integration tests: thoroughly test ActionController::Integration::Session.  #6022 [Kevin Clark]